--- a/package.json
+++ b/package.json
@@ -2,5 +2,28 @@
   "name": "nodejs-koa-restful-api-boilerplate",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build-ts": "tsc",
+    "build": "yarn build-ts",
+    "debug": "yarn build && yarn watch-debug",
+    "serve-debug": "nodemon --inspect dist/server.js",
+    "serve": "node dist/server.js",
+    "start": "yarn serve",
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm:watch-ts\" \"npm:serve-debug\"",
+    "watch-node": "nodemon dist/server.js",
+    "watch-ts": "tsc -w",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm:watch-ts\" \"npm:watch-node\""
+  },
+  "dependencies": {
+    "koa": "^2.13.4"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.2",
+    "@types/koa": "^2.13.4",
+    "@types/node": "^17.0.5",
+    "concurrently": "^6.5.1",
+    "nodemon": "^2.0.15",
+    "typescript": "^4.5.4"
+  }
 }
