--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "build-ts": "tsc",
-    "build": "yarn build-ts",
+    "build": "yarn build-ts && yarn lint",
     "debug": "yarn build && yarn watch-debug",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
     "serve-debug": "nodemon --inspect dist/server.js",
     "serve": "node dist/server.js",
     "start": "yarn serve",
@@ -22,8 +23,12 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/koa": "^2.13.4",
     "@types/node": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
     "concurrently": "^6.5.1",
+    "eslint": "^8.5.0",
     "nodemon": "^2.0.15",
+    "prettier": "2.5.1",
     "typescript": "^4.5.4"
   }
 }
