--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
     "build": "yarn build-ts && yarn lint",
     "debug": "yarn build && yarn watch-debug",
     "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet --fix",
-    "serve-debug": "nodemon --inspect dist/server.js",
-    "serve": "node dist/server.js",
+    "serve-debug": "nodemon --inspect -r dotenv/config --watch .env.production --watch dist dist/server.js dotenv_config_path=.env.production",
+    "serve": "node -r dotenv/config dist/server.js dotenv_config_path=.env.production",
     "start": "yarn serve",
     "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm:watch-ts\" \"npm:serve-debug\"",
-    "watch-node": "nodemon dist/server.js",
+    "watch-node": "nodemon --inspect -r dotenv/config --watch .env.development --watch dist dist/server.js dotenv_config_path=.env.development",
     "watch-ts": "tsc -w",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm:watch-ts\" \"npm:watch-node\""
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "koa": "^2.13.4"
   },
   "devDependencies": {
