--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@typescript-eslint/parser": "^5.8.1",
     "concurrently": "^6.5.1",
     "eslint": "^8.5.0",
+    "inversify": "^6.0.1",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^4.5.4"
   }
 }
