--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,13 @@
     "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
-    "noImplicitAny": true,
+    "removeComments": true,
+    "types": [
+      "reflect-metadata"
+    ],
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   },
   "include": [
     "src/**/*"
