--- a/package.json
+++ b/package.json
@@ -18,17 +18,22 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "koa": "^2.13.4"
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^10.1.1"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.5",
+    "@types/koa-router": "^7.4.4",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "concurrently": "^6.5.1",
     "eslint": "^8.5.0",
     "inversify": "^6.0.1",
+    "inversify-koa-utils": "^1.0.0",
     "nodemon": "^2.0.15",
     "prettier": "2.5.1",
     "reflect-metadata": "^0.1.13",
