--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "dotenv": "^10.0.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
+    "koa-json": "^2.0.2",
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.5",
+    "@types/koa-json": "^2.0.20",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
