--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.1",
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/koa": "^2.13.4",
     "@types/koa-bodyparser": "^4.3.5",
     "@types/koa-json": "^2.0.20",
+    "@types/koa-logger": "^3.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
