--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
+    "koa-response-time": "^2.1.0",
     "koa-router": "^10.1.1"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "@types/koa-bodyparser": "^4.3.5",
     "@types/koa-json": "^2.0.20",
     "@types/koa-logger": "^3.1.2",
+    "@types/koa-response-time": "^2.1.2",
     "@types/koa-router": "^7.4.4",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
