--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm:watch-ts\" \"npm:watch-node\""
   },
   "dependencies": {
+    "@koa/cors": "^3.1.0",
     "dotenv": "^10.0.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
@@ -35,6 +36,7 @@
     "@types/koa-pino-logger": "^3.0.1",
     "@types/koa-response-time": "^2.1.2",
     "@types/koa-router": "^7.4.4",
+    "@types/koa__cors": "^3.1.1",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
