--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "koa-logger": "^3.2.1",
     "koa-pino-logger": "^4.0.0",
     "koa-response-time": "^2.1.0",
-    "koa-router": "^10.1.1"
+    "koa-router": "^10.1.1",
+    "koa-static": "^5.0.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
@@ -36,6 +37,7 @@
     "@types/koa-pino-logger": "^3.0.1",
     "@types/koa-response-time": "^2.1.2",
     "@types/koa-router": "^7.4.4",
+    "@types/koa-static": "^4.0.2",
     "@types/koa__cors": "^3.1.1",
     "@types/node": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
